--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 				<version>2.22.2</version>
 				<configuration>
 				    <suiteXmlFiles>
-					<suiteXmlFile>src/test/java/testng.xml</suiteXmlFile>
+					<suiteXmlFile>testng.xml</suiteXmlFile>
 				    </suiteXmlFiles>
 				    <systemPropertyVariables>
 				      <testng.dtd.http>true</testng.dtd.http>
